@@ -2,7 +2,6 @@ package com.enonic.xp.resource;
 
 import java.io.File;
 import java.io.FileOutputStream;
-import java.net.URL;
 import java.util.ArrayList;
 
 import org.junit.Before;
@@ -47,9 +46,9 @@ public class ResourcesTest
         final ResourceKey resourceKey1 = ResourceKey.from( RESOURCE_URI_1 );
         final ResourceKey resourceKey2 = ResourceKey.from( RESOURCE_URI_2 );
         final ResourceKey resourceKey3 = ResourceKey.from( RESOURCE_URI_3 );
-        resource1 = new Resource( resourceKey1, new URL( "module:" + resourceKey1.toString() ) );
-        resource2 = new Resource( resourceKey2, new URL( "module:" + resourceKey2.toString() ) );
-        resource3 = new Resource( resourceKey3, new URL( "module:" + resourceKey3.toString() ) );
+        resource1 = new Resource( resourceKey1, new File( modulesDir, "mymodule-1.0.0" ).toURI().toURL() );
+        resource2 = new Resource( resourceKey2, new File( modulesDir, "mymodule-1.0.0/a/b.txt" ).toURI().toURL() );
+        resource3 = new Resource( resourceKey3, new File( modulesDir, "mymodule-1.0.0/a/c.txt" ).toURI().toURL() );
 
         this.list = new ArrayList();
         this.list.add( resource1 );
